CODE-520: Fixed text wrapping on buttons in Compare page

--- a/web/src/components/BranchTagSelect/BranchTagSelect.module.scss
+++ b/web/src/components/BranchTagSelect/BranchTagSelect.module.scss
@@ -8,6 +8,7 @@ html[class=''] {
   --border: 1px solid var(--grey-200) !important;
   --background-color-active: var(--white) !important;
   --box-shadow: none !important;
+  white-space: nowrap !important;
 
   &:active,
   &:hover,
